test/interaction/Issue2095.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : Size Sort _93 [ at Issue2095.agda:32.11-12 ] _94 : _93 [ at Issue2095.agda:32.11-12 ] _m_103 : Size [ at Issue2095.agda:33.8-11 ] _m′_106 : Size< _m_103 [ at Issue2095.agda:33.8-11 ] _m_107 : Size [ at Issue2095.agda:33.13-16 ] _m′_110 : Size< _m_107 [ at Issue2095.agda:33.13-16 ] _m_111 : Size [ at Issue2095.agda:33.18-21 ] _m′_114 : Size< _m_111 [ at Issue2095.agda:33.18-21 ] _m″_115 : Size< _m_111 [ at Issue2095.agda:33.18-21 ] _m_116 : Size [ at Issue2095.agda:33.23-26 ] _m′_119 : Size< _m_116 [ at Issue2095.agda:33.23-26 ] _m″_120 : Size< _m_116 [ at Issue2095.agda:33.23-26 ] _m_121 : Size [ at Issue2095.agda:33.28-31 ] _m_126 : Size [ at Issue2095.agda:33.44-47 ] _m_129 : Size [ at Issue2095.agda:33.55-58 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: ↑ _m′_106 =< _m_103 : Size (blocked on any(_m_103, _m′_106)) _m_103 =< ?0 : Size (blocked on any(_102, _m_103)) ↑ _m′_110 =< _m_107 : Size (blocked on any(_m_107, _m′_110)) _m_107 =< _m′_106 : Size (blocked on any(_m′_106, _m_107)) ↑ _m′_114 =< _m_111 : Size (blocked on any(_m_111, _m′_114)) ↑ _m″_115 =< _m_111 : Size (blocked on any(_m_111, _m″_115)) _m_111 =< _m′_110 : Size (blocked on any(_m′_110, _m_111)) ↑ _m′_119 =< _m_116 : Size (blocked on any(_m_116, _m′_119)) ↑ _m″_120 =< _m_116 : Size (blocked on any(_m_116, _m″_120)) _m_116 =< _m′_114 : Size (blocked on any(_m′_114, _m_116)) _m_121 =< _m′_119 : Size (blocked on any(_m′_119, _m_121)) _m_126 =< _m″_120 : Size (blocked on any(_m″_120, _m_126)) _m_129 =< _m″_115 : Size (blocked on any(_m″_115, _m_129))" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-give-action 0 "↑ (↑ (↑ (↑ m)))")
(agda2-status-action "")
(agda2-info-action "*All Done*" "" nil)
((last . 1) . (agda2-goals-action '()))
